@@ -31,6 +31,7 @@ wxGTK:
 
 - Implemented support for underlined fonts in wxStaticText
 - wxTopLevelWindow::SetSizeHints size increments now work
+- wxTopLevelWindow::GetSize() returns the size including the WM decorations
 
 wxMSW:
 
